# hanalytics

./: stack.yaml
hanalytics-avro/: hanalytics-avro.cabal
hanalytics-avro/Hanalytics/Schema/: Avro.hs
hanalytics-base/: hanalytics-base.cabal
hanalytics-base/Hanalytics/: Schema.hs
hanalytics-bigquery/: hanalytics-bigquery.cabal
hanalytics-bigquery/Hanalytics/Schema/: BigQuery.hs
hanalytics-postgres/: LICENSE  hanalytics-postgres.cabal
hanalytics-postgres/Hanalytics/Schema/: Postgres.hs
