name:                hanalytics-avro
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              Alexander Bich
maintainer:          quyse0@gmail.com
-- copyright:           
category:            Data
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/quyse/hanalytics.git
  subdir: hanalytics-avro

library
  exposed-modules:
    Hanalytics.Schema.Avro
  build-depends:
    aeson
    , avro
    , base
    , bytestring
    , hanalytics-base
    , scientific
    , tagged
    , text
    , unordered-containers
  ghc-options:         -Wall -Wno-tabs
  default-language:    Haskell2010
