name:                hanalytics-base
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        ../LICENSE
author:              Alexander Bich
maintainer:          quyse0@gmail.com
-- copyright:           
category:            Data
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/quyse/hanalytics.git
  subdir: hanalytics-base

library
  exposed-modules:
    Hanalytics.Schema
  build-depends:
    base
    , bytestring
    , scientific
    , text
    , vector
  default-language:    Haskell2010
